# portmap

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  dev.portmap.plist  justfile
.claude-plugin/: marketplace.json
.claude/skills/portmap/: SKILL.md
.github/: CODEOWNERS  release-please-config.json
.github/workflows/: ci.yaml  release-please.yaml  release.yaml
Formula/: portmap.rb
migrations/: 001_create_apps.sql  002_tag_colors.sql  003_unique_app_names.sql
skills/port-allocation/: SKILL.md
skills/portmap/: SKILL.md
src/: config.rs  container.rs  db.rs  known_ports.rs  lib.rs  main.rs  ports.rs  process.rs  scanner.rs  template.rs
tests/: api_test.rs  merge_test.rs
